[package]
name = "mbon"
version = "0.2.0"
edition = "2021"
authors = ["Benjamin Jacobs <benjammin1100@gmail.com>"]
description = "A serializer/deserializer for marked binary object notation"
license = "MIT"

readme = "readme.md"
repository = "https://github.com/ttocsneb/mbon"
categories = ["parsing"]
keywords = ["binary", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
byteorder = "1.4"
futures = { version = "0.3", optional = true }
async-recursion = { version = "1.0", optional = true }

[dev-dependencies]
serde = {version = "1.0", features = ["derive"] }

[features]
async = ["dep:futures", "dep:async-recursion"]


[package.metadata.docs.rs]
all-features = true
