[package]
name = "mbon"
version = "0.3.0+nightly"
edition = "2021"
authors = ["Benjamin Jacobs <ttocsneb@benjaminja.info>"]
description = "A serializer/deserializer for marked binary object notation"
license = "MIT"

readme = "readme.md"
repository = "https://github.com/ttocsneb/mbon"
categories = ["parsing"]
keywords = ["binary", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
enum-as-inner = "0.6"
maybe-async = { version = "0.2" }
anyhow = "1"
thiserror = "1"

# Async Dependencies
async-generic = { version = "1.0.0", optional = true }
async-channel = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "io-util"], optional = true }
async-trait = { version = "0.1", optional = true }
pin-project = "1.1.4"

[dev-dependencies]
rand = "0.8"
# serde = "1.0"

# [dev-dependencies]
# serde = {version = "1.0", features = ["derive"] }

[features]
# default = ["sync"]
default = ["async-tokio"]

sync = ["maybe-async/is_sync"]

async = ["dep:async-channel", "dep:async-generic", "dep:async-trait"]
async-tokio = ["async", "dep:tokio"]


[package.metadata.docs.rs]
all-features = true
