[package]
name = "mbon"
version = "0.3.0+nightly"
edition = "2021"
authors = ["Benjamin Jacobs <ttocsneb@benjaminja.info>"]
description = "A serializer/deserializer for marked binary object notation"
license = "MIT"

readme = "readme.md"
repository = "https://github.com/ttocsneb/mbon"
categories = ["parsing"]
keywords = ["binary", "serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
anyhow = "1"
thiserror = "1"
enum-as-inner = "0.6"
strum = { version = "0.26", features = ["derive"] }
maybe-async = "0.2"
async-generic = "1.0"

# Async Dependencies
async-channel = { version = "2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "fs"], optional = true }
async-trait = { version = "0.1", optional = true }
pin-project = { version = "1.1", optional = true }
async-recursion = "1.0.5"

[dev-dependencies]
futures = "0.3.30"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
# serde = "1.0"

# [dev-dependencies]
# serde = {version = "1.0", features = ["derive"] }

[features]
# default = ["sync"]
default = ["async-tokio"]

sync = ["maybe-async/is_sync"]

async = ["dep:async-channel", "dep:async-trait", "dep:pin-project"]
async-tokio = ["async", "dep:tokio"]


[package.metadata.docs.rs]
features = ["async-tokio"]
